--- a/Sinsy-Remix.vcxproj
+++ b/Sinsy-Remix.vcxproj
@@ -65,7 +65,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>hts_engine_API\include;hts_engine_API\lib;lib\xml;lib\util;lib\temporary;lib\score;lib\hts_engine_API;lib\label;lib\japanese;lib\english;lib\converter;lib\chinese;lib;include;$(IncludePath)</IncludePath>
+    <IncludePath>hts_engine_API\include;hts_engine_API\lib;lib\xml;lib\util;lib\temporary;lib\score;lib\hts_engine_API;lib\label;lib\japanese;lib\english;lib\spanish;lib\converter;lib\chinese;lib;include;$(IncludePath)</IncludePath>
     <LibraryPath>lib;hts_engine_API\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -122,6 +122,7 @@
     <ClCompile Include="lib\converter\UnknownConf.cpp" />
     <ClCompile Include="lib\converter\util_converter.cpp" />
     <ClCompile Include="lib\english\EConf.cpp" />
+    <ClCompile Include="lib\spanish\SConf.cpp" />
     <ClCompile Include="lib\hts_engine_api\HtsEngine.cpp" />
     <ClCompile Include="lib\hts_engine_api\SynthConditionImpl.cpp" />
     <ClCompile Include="lib\japanese\JConf.cpp" />
@@ -178,6 +179,7 @@
     <ClInclude Include="lib\converter\UnknownConf.h" />
     <ClInclude Include="lib\converter\util_converter.h" />
     <ClInclude Include="lib\english\EConf.h" />
+    <ClInclude Include="lib\english\SConf.h" />
     <ClInclude Include="lib\hts_engine_api\HtsEngine.h" />
     <ClInclude Include="lib\hts_engine_api\SynthConditionImpl.h" />
     <ClInclude Include="lib\japanese\JConf.h" />
