--- a/dic/english.conf
+++ b/dic/english.conf
@@ -2,4 +2,4 @@ MACRON="-"
 PHONEME_CL="cl"
 VOWEL_REDUCTION="'"
 VOWELS="aa,ae,ah,ao,aw,ay,eh,er,ey,ih,iy,ow,oy,uh,uw"
-CONSONANTS="ch,jh,hh,dh,f,s,sh,th,v,z,zh,l,r,m,n,ng,w,y,b,d,g,k,p,t"
+CONSONANTS="ch,jh,hh,dh,dx,f,s,sh,th,v,z,zh,l,r,m,n,ng,w,y,b,d,g,k,p,t,q"
